src-tauri/check_errors.txt
cargo : warning: 
unused variable: 
`service_key`
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -FilePath 
check_errors.txt 
-Encoding utf8 ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (warning   
 : unused variabl    
e: `service_key`    
:String) [], Rem    
oteException
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
  --> 
src\functions.rs:19:5
   |
19 |     
service_key: &str
   |     ^^^^^^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: 
`_service_key`
   |
   = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: unused 
variable: `client`
  --> 
src\functions.rs:25:9
   |
25 |     let client 
= Client::new();
   |         ^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: `_client`

warning: unused 
variable: `url`
  --> 
src\functions.rs:26:9
   |
26 |     let url = fo
rmat!("{}/functions/v
1", project_url); // 
Conceptual endpoint
   |         ^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: `_url`

warning: struct 
`GitHubAsset` is 
never constructed
 --> src\deps.rs:7:12
  |
7 | pub struct 
GitHubAsset {
  |            
^^^^^^^^^^^
  |
  = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: struct 
`GitHubRelease` is 
never constructed
  --> 
src\deps.rs:14:12
   |
14 | pub struct 
GitHubRelease {
   |            
^^^^^^^^^^^^^

warning: method `inst
all_from_github` is 
never used
   --> 
src\deps.rs:132:18
    |
 63 | impl 
PulseManager {
    | 
----------------- 
method in this 
implementation
...
132 |     pub async 
fn install_from_githu
b(&self, window: 
&Window, package_id: 
&str, repo_owner: 
&str, repo_name: 
&str) -> Result<(), 
String> {
    |                
  ^^^^^^^^^^^^^^^^^^^

warning: fields 
`dest_url` and 
`dest_key` are never 
read
  --> 
src\storage.rs:24:5
   |
20 | pub struct 
StorageMirror {
   |            
------------- fields 
in this struct
...
24 |     dest_url: 
String,
   |     ^^^^^^^^
25 |     dest_key: 
String,
   |     ^^^^^^^^

warning: methods 
`list_objects` and 
`upload_object` are 
never used
  --> 
src\storage.rs:56:18
   |
28 | impl 
StorageMirror {
   | 
------------------ 
methods in this 
implementation
...
56 |     pub async 
fn 
list_objects(&self, 
bucket_id: &str) -> R
esult<Vec<StorageObje
ct>, String> {
   |                 
 ^^^^^^^^^^^^
...
93 |     pub async 
fn upload_object(
   |                 
 ^^^^^^^^^^^^^

warning: function 
`get_config_path` is 
never used
  --> 
src\paths.rs:55:8
   |
55 | pub fn 
get_config_path(app: 
&AppHandle) -> 
PathBuf {
   |        
^^^^^^^^^^^^^^^

warning: function 
`get_profiles_path` 
is never used
  --> 
src\paths.rs:60:8
   |
60 | pub fn get_profi
les_path(app: 
&AppHandle) -> 
PathBuf {
   |        
^^^^^^^^^^^^^^^^^

warning: associated 
function `new` is 
never used
  --> src\telemetry.r
s:14:12
   |
13 | impl 
TelemetryEvent {
   | 
------------------- 
associated function 
in this 
implementation
14 |     pub fn 
new(event_type: 
&str, payload: 
serde_json::Value) 
-> Self {
   |            ^^^

warning: `devpulse` 
(lib) generated 11 
warnings (run `cargo 
fix --lib -p 
devpulse` to apply 3 
suggestions)
    Checking 
devpulse v0.1.0 (C:\l
ocaldev\EzDbMigrate\s
rc-tauri)
error[E0433]: failed 
to resolve: use of 
unresolved module or 
unlinked crate `tauri
_appdevpulsedb_lib`
 --> src\main.rs:5:5
  |
5 |     tauri_appdevp
ulsedb_lib::run()
  |     ^^^^^^^^^^^^^
^^^^^^^^^^ use of 
unresolved module or 
unlinked crate `tauri
_appdevpulsedb_lib`
  |
  = help: if you 
wanted to use a 
crate named `tauri_ap
pdevpulsedb_lib`, 
use `cargo add tauri_
appdevpulsedb_lib` 
to add it to your 
`Cargo.toml`

For more information 
about this error, 
try `rustc --explain 
E0433`.
error: could not 
compile `devpulse` 
(bin "devpulse") due 
to 1 previous error
